--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 
 		<mule.version>3.9.0</mule.version>
     	<mule.tools.version>1.2</mule.tools.version>
+    	<derby.version>10.14.1.0</derby.version>
+    	<activeMQ.version>5.15.3</activeMQ.version>	
 	</properties>
 
 	<build>
@@ -136,16 +138,12 @@
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
-    <dependency>
-            <groupId>org.mule.modules</groupId>
-            <artifactId>mule-module-db</artifactId>
-            <version>${mule.version}</version>
-            <scope>provided</scope>
-        </dependency>
+   
     <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.14.1.0</version>
+            <version>${derby.version}</version>
+            <scope>compile</scope>
         </dependency>
     <dependency>
             <groupId>org.mule.transports</groupId>
@@ -153,10 +151,17 @@
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
+        <!--  Non mule dependency -->
+         <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-db</artifactId>
+            <version>${mule.version}</version>
+            <scope>provided</scope>
+        </dependency>
     <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
-            <version>5.15.3</version>
+            <version>${activeMQ.version}</version>
         </dependency>
     </dependencies>
 
