created a new global xml file

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Tue Feb 20 13:16:03 EST 2018
+#Wed Feb 21 12:32:27 EST 2018
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=global.xml,maven-project.xml
 domain=default
-config.resources=maven-project.xml
